<resources>
    <string name="app_name">UPMC MJ</string>
    <string name="plugin_template">Plugin: UPMC MJ</string>
    <string name="morning_greeting">Good Morning! We\'re checking in to see how you\'re doing.</string>
    <string name="last_24_drinking">In the last 24 hours, how many DRINKS did you have?</string>
    <string name="last_24_smoking">In the last 24 hours, how many CIGARETTES did you have?</string>
    <string name="last_24_marijuana">Have you used marijuana today?</string>
    <string name="last_checkin_marijuana">Have you used marijuana since the last check-in?</string>
    <string name="hint_total_number">Total Number</string>
    <string name="when_last_time">When was the last time you started smoking marijuana?</string>
    <string name="when_stop_high">When did you stop feeling high? (that last time)</string>
    <string name="what_did_mj_use">How did you smoke it?</string>
    <string name="how_much">How much did you smoke at that time?</string>
    <string name="rate_craving">Rate your craving to smoke right now</string>
    <string name="rate_quantity">How much did you smoke that time?</string>
    <string name="how_are_you_feeling">How are you feeling right now?</string>
    <string name="how_high_are_you_feeling">How high are you feeling right now?</string>
    <string name="what_else_used_past3">What else have you used in the past 3 hours?</string>
    <string name="what_else_used">What else did you use when smoking?</string>
    <string name="how_used">How did you smoke it?</string>
    <string name="alcohol">alcohol</string>
    <string name="hits">hits</string>
    <string name="grams">grams</string>
    <string name="tobacco">tobacco</string>
    <string name="caffeine">caffeine</string>
    <string name="mj_social">Are you smoking alone or with others?</string>
    <string name="alone">alone</string>
    <string name="not_alone">with others</string>
    <string name="relaxed">Relaxed</string>
    <string name="sluggish">Sluggish</string>
    <string name="foggy">Foggy thinking</string>
    <string name="anxious">Anxious</string>
    <string name="sad">Sad</string>
    <string name="challenges_header">Today, how much difficulty did you have with…</string>
    <string name="solving_problems_learning">Solving problems or learning new things?</string>
    <string name="remembering_things">Remembering things, like where you put things or appointments?</string>
    <string name="keeping_attention">Keeping your attention on an activity for long?</string>
    <string name="concentrating_thinking">Concentrating and thinking clearly?</string>
    <string name="lbl_none">None</string>
    <string name="lbl_alot">A lot</string>
    <string name="joint">Joint</string>
    <string name="bowl">Bowl</string>
    <string name="pipe">Pipe</string>
    <string name="bong">Bong</string>
    <string name="blunt">Blunt</string>
    <string name="pen">Dab pen</string>
    <string name="other">other</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_next">Next</string>
    <string name="btn_cancel">Cancel</string>
    <string name="when_did_mj_start">When did marijuana use start ?</string>
    <string name="when_did_mj_end">When did marijuana use end ?</string>
    <string name="btn_schedule">Schedule</string>
    <string name="morning_schedule">Morning schedule</string>
    <string name="evening_schedule">Evening schedule</string>
    <string name="other_usage">Did you use tobacco or drink alcohol when smoking?</string>
    <string name="reason">Main reason for smoking?</string>
    <string name="cope">to cope</string>
    <string name="social">to be social</string>
    <string name="used_tobacco">used tobacco</string>
    <string name="used_none">none</string>
    <string name="drank_alcohol">drank alcohol</string>
    <string name="how_much_hint">Type in a number: 0.0</string>

    <string name="place">Place where smoked?</string>
    <string name="home1">home</string>
    <string name="home2">other\'s home</string>
    <string name="work">work/school</string>
    <string name="school">school</string>





</resources>
