<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/feeling_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/how_high_are_you_feeling"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <SeekBar
            android:id="@+id/rate_how_high"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/feeling_header"
            android:layout_alignStart="@+id/feeling_header"
            android:layout_below="@+id/feeling_header"
            android:max="10"
            android:progress="-1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rate_how_high"
            android:layout_alignStart="@+id/rate_how_high"
            android:layout_below="@+id/rate_how_high"
            android:text="@string/lbl_none"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/rate_how_high"
            android:layout_alignRight="@+id/rate_how_high"
            android:layout_below="@+id/rate_how_high"
            android:text="@string/lbl_alot"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:paddingTop="15dp"
            android:text="@string/what_else_used"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:text="@string/alcohol" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox1"
            android:text="@string/tobacco" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox2"
            android:text="@string/caffeine" />

        <LinearLayout
            android:id="@+id/other_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/check_other_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/other_container"
            android:text="@string/mj_social"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <RadioGroup
            android:id="@+id/social_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView24"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/social_alone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="alone"
                android:text="@string/alone" />

            <RadioButton
                android:id="@+id/social_not_alone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="with_others"
                android:text="@string/not_alone" />
        </RadioGroup>

        <Button
            android:id="@+id/initiated_submit_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/social_context"
            android:layout_marginTop="16dp"
            android:background="@color/primary"
            android:text="@string/btn_submit" />

        <Button
            android:id="@+id/initiated_cancel_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/initiated_submit_2"
            android:layout_marginTop="16dp"
            android:text="@string/btn_cancel" />

    </RelativeLayout>
</ScrollView>
