<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/ui_mj_end_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when_did_mj_end"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <DatePicker
            android:id="@+id/mjs_user_end1_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ui_mj_end_header"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TimePicker
            android:id="@+id/mjs_user_end1_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mjs_user_end1_end_date"
            android:layout_centerHorizontal="true"
            android:timePickerMode="spinner" />



        <TextView
            android:id="@+id/ui_textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mjs_user_end1_end_time"
            android:paddingTop="15dp"
            android:text="@string/how_used"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <CheckBox
            android:id="@+id/mjs_user_end1_check_joint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ui_textView15"
            android:text="@string/joint" />

        <CheckBox
            android:id="@+id/mjs_user_end1_check_bowl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_check_joint"
            android:text="@string/bowl" />

        <CheckBox
            android:id="@+id/mjs_user_end1_check_bong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_check_bowl"
            android:text="@string/bong" />



        <CheckBox
            android:id="@+id/mjs_user_end1_check_blunt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_check_bong"
            android:text="@string/blunt" />


        <CheckBox
            android:id="@+id/mjs_user_end1_check_pen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_check_blunt"
            android:text="@string/pen" />


        <LinearLayout
            android:id="@+id/ui_other_usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mjs_user_end1_check_pen"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/mjs_user_end1_check_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/mjs_user_end1_check_other_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other" />

        </LinearLayout>



        <TextView
            android:id="@+id/ui_textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ui_other_usage"
            android:text="@string/rate_quantity"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/mjs_user_end1_how_much_mj"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"

            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ui_textView14"
            android:hint="@string/how_much_hint"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/mjs_user_end1_smoke_units"
            android:layout_below="@+id/mjs_user_end1_how_much_mj"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/mjs_user_end1_grams"
                android:text="@string/grams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/mjs_user_end1_hits"
                android:text="@string/hits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </RadioGroup>


        <TextView
            android:id="@+id/ui_end_textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mjs_user_end1_smoke_units"
            android:paddingTop="15dp"
            android:text="@string/what_else_used"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <CheckBox
            android:id="@+id/mjs_user_end1_tobacco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ui_end_textView7"
            android:text="@string/alcohol" />

        <CheckBox
            android:id="@+id/mjs_user_end1_alcohol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_tobacco"
            android:text="@string/tobacco" />

        <CheckBox
            android:id="@+id/mjs_user_end1_caffeine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_alcohol"
            android:text="@string/caffeine" />

        <LinearLayout
            android:id="@+id/ui_end_other_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mjs_user_end1_caffeine"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/mjs_user_end1_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/mjs_user_end1_used_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other" />

        </LinearLayout>


        <Button
            android:id="@+id/mjs_user_end1_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ui_end_other_container"
            android:layout_marginTop="16dp"
            android:background="@color/primary"
            android:text="@string/btn_next" />

        <Button
            android:id="@+id/mjs_user_end1_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mjs_user_end1_next"
            android:layout_marginTop="16dp"
            android:text="@string/btn_cancel" />



    </RelativeLayout>
</ScrollView>
